admin panel with functions

--- a/src/components/home/CardDia/CardDia.module.sass
+++ b/src/components/home/CardDia/CardDia.module.sass
@@ -50,6 +50,22 @@
   font-size: 14px
   color: white
 
+.addButton 
+  width: 20px
+  height: 20px
+  background-color: #005a9e
+  color: #fff
+  border-radius: 50%
+  font-size: 12px
+  display: flex
+  align-items: center
+  justify-content: center
+  cursor: pointer
+  border: none
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1)
+  &:hover
+      background-color: #007bff
+
 @media (max-width: 940px) and (orientation: portrait)  /* Móviles en orientación vertical */
   .dayContainer
     width: 100%
