--- a/src/components/home/CardCompose/CardCompose.module.sass
+++ b/src/components/home/CardCompose/CardCompose.module.sass
@@ -8,23 +8,23 @@
   background-color: #fff
   border-radius: 1.5rem
   display: flex
-  flex-direction: column
   justify-content: center
   align-items: center
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2)
   z-index: 1000
   transition: background-color 0.3s ease-in-out
   overflow: hidden
-  display: flex
 
 .cardComposeContainerForm
   display: grid
-  grid-template-columns: repeat(4, 1fr)
-  position: relative
+  grid-template-columns: 1fr 1fr 1fr
+  gap: 2rem
   background-color: #fff
   height: 90%
   width: 90%
+  padding: 1rem
   border-radius: 1rem
+
 .closeIcon
   position: absolute
   top: 1rem
@@ -39,40 +39,24 @@
   color: #4caf50
 
 .content
-  width: 100%
-  padding: 2rem
   display: flex
   flex-direction: column
-  align-items: center
   gap: 1.5rem
 
-.title
-  font-size: 2rem
-  font-weight: bold
-  color: white
-  text-align: center
-
-.form
+.column1, .column2, .column3
   display: flex
   flex-direction: column
-  gap: 1rem
-  width: 100%
+  align-items: flex-start
 
 .column1
-  display: flex
-  grid-column: span 1
-  grid-column-start: 1
+  grid-column: 1
+  align-items: center
 
 .column2
-  display: flex
-  grid-column: span 2
-  grid-column-start: 2
+  grid-column: 2
 
-.uploadButton
-  grid-column-start: 1
-
-.inputdate
-  grid-column-start: 2
+.column3
+  grid-column: 3
 
 .input, .textarea, .select
   width: 100%
@@ -81,18 +65,16 @@
   border: 1px solid #ddd
   border-radius: 8px
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1)
-
+.cardComposeContainerForm h1
+  font-size: 1rem
 .textarea
   min-height: 100px
+  height: 300px
   resize: vertical
 
-.select
-  background-color: #fff
-  font-size: 16px
-  cursor: pointer
-  color: #333
-
 .button
+  margin-top: 1rem
+  margin-left: auto
   padding: 10px 20px
   font-size: 16px
   font-weight: bold
