--- a/src/components/home/FooterCard/FooterCard.module.sass
+++ b/src/components/home/FooterCard/FooterCard.module.sass
@@ -57,9 +57,9 @@
     padding: 0.5rem 1rem
     z-index: 10
 
-  :global(html, body)  // 🔥 Usa `:global()` para aplicar estilos globales
-    position: relative
-    margin: 0
+  // :global(html, body)  // 🔥 Usa `:global()` para aplicar estilos globales
+  //   position: relative
+  //   margin: 0
 
   .botonUbicacion, .botonChat
     height: 35px
