--- a/src/components/home/CardDia/CardDia.module.sass
+++ b/src/components/home/CardDia/CardDia.module.sass
@@ -80,7 +80,10 @@
       max-height: 250px
     .container
       padding-bottom: 10%
-
+@media (min-width: 2000px)  /* Pantallas Auroras */
+  .eventsContainer
+    height: 400px
+    
 @media (min-width: 2560px)  /* Pantallas 4K o mayores */
   .container 
     margin: 0 auto 0 auto
