--- a/src/components/home/CardCompose/CardCompose.module.sass
+++ b/src/components/home/CardCompose/CardCompose.module.sass
@@ -65,6 +65,7 @@
   border: 1px solid #ddd
   border-radius: 8px
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1)
+    
 .cardComposeContainerForm h1
   font-size: 1rem
 .textarea
@@ -87,3 +88,10 @@
 
 .button:hover
   background-color: #45a049
+
+
+
+@media (min-width: 1360px) and (max-width: 1920px)  /* Pantallas de portátiles */
+.cardComposeContainer
+  height: 70vh
+
