--- a/src/components/home/PrincipalCard/PrincipalCard.module.sass
+++ b/src/components/home/PrincipalCard/PrincipalCard.module.sass
@@ -60,6 +60,7 @@
   transform: translateY(-50%)
   text-align: right
   padding-right: 1vw
+  width: 20%
 
 .dateLarge
   font-size: 1.2rem
@@ -77,7 +78,7 @@
   font-weight: normal
   color: white
 
-@media (min-width: 2560px)  /* Pantallas 4K o mayores */
+@media (min-width: 3000px)  /* Pantallas 4K o mayores */
   .title
     font-size: 4rem
     margin-top: 1%
@@ -94,17 +95,34 @@
     font-size: 2.2rem
   .year
     font-size: 2rem  
+
+@media (min-width: 2560px)  /* Pantallas Auroras */
+  .title
+    font-size: 2.5rem
+  .subtitle
+    font-size: 3rem 
+  .description
+    font-size: 2.5rem
+    top:-110%
+  .dateContainer
+    top: 40%
+  .dateLarge
+    font-size: 2rem
+  .dateSmall
+    font-size: 1.5rem
+  .year
+    font-size: 1.5rem  
 @media (min-width: 1360px) and (max-width: 1920px)  /* Pantallas de portátiles */
   .title
-    font-size: 1.5rem  /* Reduce el tamaño de la fuente */
-    margin-top: 1%   /* Ajusta el margen superior */
+    font-size: 1.3rem  /* Reduce el tamaño de la fuente */
+    margin-top: 0.5%   /* Ajusta el margen superior */
 
   .subtitle
-    font-size: 1.5rem  /* Ajusta el tamaño de la fuente para subtítulos */
+    font-size: 1.3rem  /* Ajusta el tamaño de la fuente para subtítulos */
 
   .description
-    font-size: 2rem  /* Ajusta el tamaño de la fuente a un valor relativo */
-    top: -80%   /* Ajusta la posición vertical */
+    font-size: 1.5rem  /* Ajusta el tamaño de la fuente a un valor relativo */
+    top: -100%   /* Ajusta la posición vertical */
 
   .dateContainer
     top: 45%  /* Ajusta la posición del contenedor de la fecha */
@@ -124,10 +142,14 @@
   .title
     font-size: 2.5vw  /* Ajusta el tamaño de la fuente para pantallas pequeñas */
     margin-top: 5
+    height: 20px
+    padding: 3
   
   .subtitle
-    font-size:2vw  /* Reduce el tamaño de la fuente para subtítulos */
-
+    font-size:2.5vw  /* Reduce el tamaño de la fuente para subtítulos */
+    margin-top: -5
+    height: 15px
+    padding: 3
   .description
     font-size: 3vw  /* Usa unidades relativas para que el tamaño se adapte */
     top: -120%  /* Ajusta la posición vertical para pantallas más pequeñas */
