--- a/src/components/home/CardDia/CardDia.module.sass
+++ b/src/components/home/CardDia/CardDia.module.sass
@@ -16,39 +16,93 @@
   font-size: 24px
   font-weight: bold
   color: white
-  background-color: black
+  background-color: rgba(255,255,255,0.5)
   padding: 10px
   border-radius: 10px 10px 0 0
-  margin-bottom: 1%
+  position: relative
+
+  &::after
+    content: ''
+    position: absolute
+    bottom: 8px           // ligeramente por debajo del texto
+    left: 0               // empieza justo desde el borde
+    width: 50%            // longitud de la línea
+    height: 2px
+    background-color: white
+    opacity: 0.8
+
 
 .eventsContainer
-  background-color: rgba(0, 0, 0, 0.7)
+  background-color: rgba(255,255,255,0.5)
   padding: 10px
   border-radius: 0 0 10px 10px
   height: 250px
   max-height: 300px
   overflow-y: auto
 
+.eventStripeFixed
+  display: flex
+  width: 100%
+  height: 6px
+  overflow: hidden
+  border-radius: 0 0 10px 10px
+  margin-top: -6px   // si quieres pegarlo justo debajo de la caja
+
+.colorBlockYellow
+  flex: 1
+  background-color: #FFD600  // amarillo puro
+
+.colorBlockOrange
+  flex: 1
+  background-color: #FF8C00  // naranja fuerte
+
+.colorBlockPink
+  flex: 1
+  background-color: #FF69B4  // rosa intenso
+
+.colorBlockRed
+  flex: 1
+  background-color: #C62828  // rojo profundo
+
+.colorBlockWine
+  flex: 1
+  background-color: #7B1E3B  // vinotinto clásico
+
 .eventCard
+  background-color: white
   margin: 10px 0
   padding: 10px
   border-radius: 10px
   cursor: pointer
+  position: relative         // 🔐 Necesario para contener ::before
+  overflow: hidden           // 🔐 Recorta la línea al borde
+
   &:hover
     transform: scale(1.05)
     transition: transform 0.2s ease-in-out
+
+  &::before
+    content: ''
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 50%
+    height: 8px
+    background-color: var(--line-color)
+    z-index: 0
+  
 .eventTitle
   font-size: 16px
   font-weight: bold
-  color: white
+  color: black
 
 .eventHour
   font-size: 14px
-  color: white
+  color: black
 
 .eventPlace
   font-size: 14px
-  color: white
+  color: black
 
 .addButton 
   width: 20px
@@ -92,6 +146,8 @@
     max-height: 700px
   .dayTitle
     font-size: 4rem
+  .dayTitle::after
+    height: 4px  
   .eventTitle
     font-size: 2rem
   .eventHour
