--- a/src/components/home/CardDia/CardDia.module.sass
+++ b/src/components/home/CardDia/CardDia.module.sass
@@ -51,23 +51,23 @@
 
 .colorBlockYellow
   flex: 1
-  background-color: #FFD600  // amarillo puro
+  background-color: #F29224  // amarillo puro
 
 .colorBlockOrange
   flex: 1
-  background-color: #FF8C00  // naranja fuerte
+  background-color: #EC6E25  // naranja fuerte
 
 .colorBlockPink
   flex: 1
-  background-color: #FF69B4  // rosa intenso
+  background-color: #E73943  // rosa intenso
 
 .colorBlockRed
   flex: 1
-  background-color: #C62828  // rojo profundo
+  background-color: #CD1531  // rojo profundo
 
 .colorBlockWine
   flex: 1
-  background-color: #7B1E3B  // vinotinto clásico
+  background-color: #631E30  // vinotinto clásico
 
 .eventCard
   background-color: white
