--- a/src/components/home/PrincipalCard/PrincipalCard.module.sass
+++ b/src/components/home/PrincipalCard/PrincipalCard.module.sass
@@ -58,6 +58,7 @@
 .dateRange
   font-size: 2rem
   font-weight: bolder
+  font-family: 'Roboto', sans-serif
   color: #ff0000
 
 .month
@@ -88,9 +89,11 @@
 @media (min-width: 2560px) // Pantallas ultra grandes
   .title
     font-size: 3rem
+    margin-left: 3%
   .subtitle
-    font-size: 5rem
+    font-size: 3.5rem
     margin-top: -2rem
+    margin-left: 3%
   .dateContainer
     top: 40%
   .dateRange
@@ -100,12 +103,15 @@
   .year
     font-size: 1.5rem
 
-@media (min-width: 1200px) and (max-width: 1920px) // Portátiles
+@media (min-width: 1000px) and (max-width: 1920px) // Portátiles
   .title
-    font-size: 1.3rem
+    font-size: 1.5rem
     margin-top: 0.5%
+    margin-left: 3%
   .subtitle
-    font-size: 2rem
+    font-size: 1.7rem
+    margin-right: 1rem
+    margin-left: 3%
   .dateContainer
     top: 45%
   .dateRange
@@ -119,12 +125,12 @@
   .header
     height: 7vh
   .title
-    font-size: 3vw
+    font-size: 0.8rem
     margin-top: 5px
     height: 20px
     padding: 3px
   .subtitle
-    font-size: 4vw
+    font-size: 1rem
     margin-top: -25px
     height: 15px
     padding: 3px
@@ -135,6 +141,6 @@
   .dateRange
     font-size: 1rem
   .month
-    font-size: 1.2rem
+    font-size: 0.5rem
   .year
     font-size: 0.6rem
